--- a/index.html
+++ b/index.html
@@ -10,36 +10,38 @@
 
 <body>
   <div class="main">
-    <input id="display" readonly></div>
-    <!-- <div id="screen"></div> -->
-    <div class="keys">
-      <span onclick="clearDisplay()" id="keyac">AC</span>
-      <span id="keyM">M</span>
-      <span id="key%">%</span>
-      <span onclick = "appendToDisplay('/')" id="key/">/</span>
-      <span onclick = "appendToDisplay('7')" id="key7">7</span>
-      <span onclick = "appendToDisplay('8')" id="key8">8</span>
-      <span onclick = "appendToDisplay('9')" id="key9">9</span>
-      <span onclick = "appendToDisplay('*')" id="key*">x</span>
-      <span onclick = "appendToDisplay('4')" id="key4">4</span>
-      <span onclick = "appendToDisplay('5')" id="key5">5</span>
-      <span onclick = "appendToDisplay('6')" id="key6">6</span>
-      <span onclick = "appendToDisplay('-')" id="key-">-</span>
-      <span onclick = "appendToDisplay('1')" id="key1">1</span>
-      <span onclick = "appendToDisplay('2')" id="key2">2</span>
-      <span onclick = "appendToDisplay('3')" id="key3">3</span>
-      <span onclick = "appendToDisplay('+')" id="key+">+</span>
-      <span onclick = "appendToDisplay('0')" id="key0">0</span>
-      <span onclick = "appendToDisplay('.')" id="key.">.</span>
-      <span onclick = "calculation()" id="key=">=</span>
-      <span  id="keyc">C</span>
-    </div>
-  
-    <div id="clear"></div>
-    <div id="cal"></div>
+    <input id="display" readonly>
+ 
+  <!-- <div id="screen"></div> -->
+  <div class="keys">
+    <span onclick="clearDisplay()" id="keyac">AC</span>
+    <span id="keyM">M</span>
+    <span id="key%">%</span>
+    <span onclick="appendToDisplay('/')" id="key/">/</span>
+    <span onclick="appendToDisplay('7')" id="key7">7</span>
+    <span onclick="appendToDisplay('8')" id="key8">8</span>
+    <span onclick="appendToDisplay('9')" id="key9">9</span>
+    <span onclick="appendToDisplay('*')" id="key*">x</span>
+    <span onclick="appendToDisplay('4')" id="key4">4</span>
+    <span onclick="appendToDisplay('5')" id="key5">5</span>
+    <span onclick="appendToDisplay('6')" id="key6">6</span>
+    <span onclick="appendToDisplay('-')" id="key-">-</span>
+    <span onclick="appendToDisplay('1')" id="key1">1</span>
+    <span onclick="appendToDisplay('2')" id="key2">2</span>
+    <span onclick="appendToDisplay('3')" id="key3">3</span>
+    <span onclick="appendToDisplay('+')" id="key+">+</span>
+    <span onclick="appendToDisplay('0')" id="key0">0</span>
+    <span onclick="appendToDisplay('.')" id="key.">.</span>
+    <span onclick="calculation()" id="key=">=</span>
+    <span id="keyc">C</span>
+  </div>
+</div>
+
+  <div id="clear"></div>
+  <div id="cal"></div>
   </div>
   <script src="index.js"></script>
-  
+
 </body>
 
 </html>
