added percentage function

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
  
   <!-- <div id="screen"></div> -->
   <div class="keys">
-    <span onclick="clearDisplay()" id="keyac">AC</span>
+    <span onclick="allClear()" id="keyac">AC</span>
     <span id="keyM">M</span>
-    <span id="key%">%</span>
+    <span onclick="percentage()" id="key%">%</span>
     <span onclick="appendToDisplay('/')" id="key/">/</span>
     <span onclick="appendToDisplay('7')" id="key7">7</span>
     <span onclick="appendToDisplay('8')" id="key8">8</span>
@@ -33,7 +33,7 @@
     <span onclick="appendToDisplay('0')" id="key0">0</span>
     <span onclick="appendToDisplay('.')" id="key.">.</span>
     <span onclick="calculation()" id="key=">=</span>
-    <span id="keyc">C</span>
+    <span onclick="recentClear()" id="keyc">C</span>
   </div>
 </div>
 
